<resources>
    <string name="app_name">ApiCallingDemo</string>
    <string name="trending">Trending</string>
    <string name="retry">Retry</string>
    <string name="search_repo">Search here…</string>
    <string name="free_programming_books">free-programming-books</string>
    <string name="freeCodeCamp">freeCodeCamp.org\'s open-source codebase and curriculum. Learn to code for free.</string>
    <string name="star_rate">42449</string>
    <string name="watcher_count">42449</string>
    <string name="no_internet">No Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="travel_summery">Travel Summery</string>
    <string name="km">km</string>
    <string name="value_km">15493</string>
    <string name="vehicle_no_4_vehicle_no_5ghgfj">Vehicle No. 4 - Vehicle No. 5ghgfj...</string>
    <string name="header_name">Travel Summery</string>
    <string name="_15493">15493</string>
    <string name="running">Running</string>
    <string name="stop">Stop</string>
    <string name="idle">Idle</string>
    <string name="inavtive">Inavtive</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="nbsfdvjd_jfjjfrefr_jfjkerkfjkre_jerfkej_ne">nbsfdvjd jfjjfrefr jfjkerkfjkre jerfkej (NE)</string>
    <string name="_60_km_h">60 km/h</string>
    <string name="avg">Avg</string>
    <string name="Traverl_name">hj jhdjsa</string>
    <string name="max">Max</string>
    <string name="_12_31_hrs">12:31 hrs</string>
    <string name="search">Search</string>
    <string name="data_range">Data Range</string>
    <string name="no_data_found">No data found</string>
    <string name="filter">Filter</string>
    <string name="more">More</string>
    <string name="yesterday">Yesterday</string>
    <string name="custom">Custom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Schedule</string>
    <string name="export">Export</string>
    <string name="view">View</string>
</resources>