<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sub_menu"
        android:title="@string/more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/schedule"
                android:title="@string/schedule"
                app:showAsAction="never" />
            <item
                android:id="@+id/export"
                android:title="@string/export"
                app:showAsAction="never" />
            <item
                android:id="@+id/view"
                android:title="@string/view"
                app:showAsAction="never" />
        </menu>



    </item>

</menu>