<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNoInternet"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:tint="@color/white"
        android:src="@drawable/ic_no_internet_new"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSomethingWentWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/ivNoInternet"
        app:layout_constraintEnd_toEndOf="@id/ivNoInternet"
        app:layout_constraintTop_toBottomOf="@id/ivNoInternet"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_internet"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvSomethingWentWrong"
        app:layout_constraintEnd_toEndOf="@id/tvSomethingWentWrong"
        app:layout_constraintTop_toBottomOf="@id/tvSomethingWentWrong"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/ivNoInternet"
        app:layout_constraintEnd_toEndOf="@id/ivNoInternet"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>